added hover effect at footer

--- a/index.html
+++ b/index.html
@@ -838,27 +838,27 @@
                         <ul class="list--unstyled">
                             <img class="footer__logo mb-2" src="./assets/img/logo.svg" alt="Logo">
                             <li class="text--uppercase text--bold mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Consulting
                                 </a>
                             </li>
                             <li class="text--uppercase text--bold mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Digital
                                 </a>
                             </li>
                             <li class="text--uppercase text--bold mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Engineering
                                 </a>
                             </li>
                             <li class="text--uppercase text--bold mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Industrialized Globalshore&reg;
                                 </a>
                             </li>
                             <li class="text--uppercase text--bold">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Cambridge Consultants
                                 </a>
                             </li>
@@ -867,37 +867,37 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     About Us
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Overview
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Strategy
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     What We Do
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Altran Worldwide
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Corporate Governance
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Corporate Social Responsibility
                                 </a>
                             </li>
@@ -906,67 +906,67 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Industries
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Automotive
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Aeronautics
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Space, Defense & Naval
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Rail, Infrastructure & Transportation
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Energy
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Industrials & Electronics
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Life Sciences
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Telecom & Media
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Finance & Public Sector
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Semiconductor
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Software & Internet
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Case Studies
                                 </a>
                             </li>
@@ -975,32 +975,32 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Newsroom
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     News & Press Releases
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Trade Shows
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Insights
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Media Library
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Did You Know?
                                 </a>
                             </li>
@@ -1009,7 +1009,7 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Insights
                                 </a>
                             </li>
@@ -1018,57 +1018,57 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Finance
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Capgemini Friendly Tender Offer
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Altran Stock
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Financial Results
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Financial Calendar
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Regulated Information
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Registration Documents
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     General Meetings And Events
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Financial Press Releases and News
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Key Figures
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Archives
                                 </a>
                             </li>
@@ -1077,32 +1077,32 @@
                     <div class="col-md-2">
                         <ul class="list--unstyled">
                             <li class="footer__title text--uppercase text--bold text--blue mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Careers
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Why Altran?
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Your Career
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Students & Graduates
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     Apply Now
                                 </a>
                             </li>
                             <li class="text--md text--uppercase mb-2">
-                                <a href="#" class="no--decoration">
+                                <a href="#" class="footer__list-item no--decoration">
                                     My Applicant Space
                                 </a>
                             </li>
