--- a/index.html
+++ b/index.html
@@ -459,6 +459,28 @@
         </div>
     </div>
 </header>
+<!--=============== STICKY DESKTOP HEADER ===============-->
+<div class="container-fluid header--sticky d-none d-lg-block pt-3 pb-3 js--header--sticky">
+    <div class="row">
+        <div class="col-12">
+            <div class="container m-auto">
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img class="header--sticky__logo mr-3" src="./assets/img/logo.svg" alt="Logo">
+                        <a href="#" class="text--md text--uppercase text--bold text--grey no--decoration">
+                            Home page
+                        </a>
+                    </div>
+                    <div class="col-auto">
+                        <a href="#" class="text--md text--uppercase text--bold text--grey no--decoration">
+                            Share
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!--=============== MOBILE HEADER ===============-->
 <header class="header container-fluid d-lg-none position--relative pt-4 pb-4">
     <div class="row">
